Restructured project as a package
